# RedFlag

./: .gitignore  LICENSE.md  README.md  action.yaml  config.sample.yaml  pyproject.toml
.github/workflows/: release.yaml
addepar_redflag/: __main__.py  evaluate.py  redflag.py
addepar_redflag/models/prompts/: response_models.py
addepar_redflag/models/structures/: PullRequest.py  Result.py  Ticket.py  __init__.py
addepar_redflag/templates/: results.html.jinja2
addepar_redflag/util/: aws.py  cli.py  config.py  console.py  github.py  jira.py  llm.py  slack.py
docs/: example_evaluation_dataset.json  example_report.html  index.html
util-scripts/slack/: post-message.py
